--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,4 @@ Debug/
 /TestGameEnginev13/GameEngine2/dist/
 /TestGameEnginev13/GameEngine2/nbproject/
 /TestGameEnginev13/GameEngine2/.dep.inc
+/TestGameEnginev13/GameEngine2/baseUnitBuildings.h
