Closes #18, added unit/building creator code.

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,4 @@ Debug/
 /TestGameEnginev13/GameEngine2/nbproject/
 /TestGameEnginev13/GameEngine2/.dep.inc
 /TestGameEnginev13/GameEngine2/baseUnitBuildings.h
+/AddUnitOrBuilding/addUnitOrBuilding
